<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/iv_weather"
        android:layout_width="@dimen/img_size"
        android:layout_height="@dimen/img_size"
        android:layout_marginLeft="@dimen/margin_xxlarge"
        android:src="@drawable/art_rain" />

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_medium_2"
        android:layout_toRightOf="@id/iv_weather"
        android:text="@string/dummy_date"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/text_regular_2x" />

    <TextView
        android:id="@+id/tv_weather_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/tv_date"
        android:layout_below="@id/tv_date"
        android:text="@string/today_weather"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/text_regular_2x" />

    <TextView
        android:id="@+id/tv_min_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/margin_xxlarge"
        android:text="@string/today_min_temp"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/text_regular_2x" />

    <TextView
        android:id="@+id/tv_max_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/margin_medium_3"
        android:layout_toLeftOf="@id/tv_min_temp"
        android:text="@string/today_max_temp"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/text_regular_2x" />


</RelativeLayout>