<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/margin_medium_2"
    android:layout_marginRight="@dimen/margin_medium_2"
    android:layout_marginTop="@dimen/margin_medium_2"
    app:cardElevation="@dimen/margin_small">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:weightSum="5">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3">

            <TextView
                android:id="@+id/tv_today_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_medium_2"
                android:text="@string/dummy_date"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/text_regular_2x" />

            <ImageView
                android:id="@+id/iv_today_weather"
                android:layout_width="@dimen/img_today_weather"
                android:layout_height="@dimen/img_today_weather"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/tv_today_date"
                android:layout_marginLeft="@dimen/margin_medium_2"
                android:layout_marginTop="@dimen/margin_medium_2"
                android:src="@drawable/art_rain" />

            <TextView
                android:id="@+id/tv_today_max_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@id/iv_today_weather"
                android:layout_below="@id/tv_today_date"
                android:layout_marginRight="@dimen/margin_medium_2"
                android:text="@string/today_max_temp"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/text_big" />

            <TextView
                android:id="@+id/tv_today_min_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/tv_today_max_temp"
                android:layout_marginBottom="@dimen/text_regular_2x"
                android:layout_marginRight="@dimen/margin_xxlarge"
                android:layout_marginTop="@dimen/margin_medium_2"
                android:text="@string/today_min_temp"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/text_heading_1x" />

            <TextView
                android:id="@+id/tv_today_weather"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/iv_today_weather"
                android:layout_below="@id/iv_today_weather"
                android:layout_marginBottom="@dimen/margin_medium_2"
                android:layout_marginTop="@dimen/margin_medium_2"
                android:text="@string/today_weather"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/text_regular_2x" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:background="@color/background_for_moisture_pressure_and_speed">

            <TextView
                android:id="@+id/lbl_moisture_amount_first"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_medium_2"
                android:layout_marginTop="@dimen/margin_medium_2"
                android:text="@string/lbl_moisture_amount_data_first"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/text_regular_2x" />

            <TextView
                android:id="@+id/lbl_moisture_amount_second"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/lbl_moisture_amount_first"
                android:layout_below="@id/lbl_moisture_amount_first"
                android:text="@string/lbl_moisture_amount_data_second"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/text_regular_2x" />

            <TextView
                android:id="@+id/tv_moisture_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/lbl_moisture_amount_first"
                android:layout_below="@id/lbl_moisture_amount_second"
                android:layout_marginLeft="@dimen/margin_medium_2"
                android:text="@string/dummy_moisture_amount"
                android:textColor="@color/icons"
                android:textSize="@dimen/text_regular_2x" />

            <TextView
                android:id="@+id/lbl_pressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/lbl_moisture_amount_first"
                android:layout_below="@id/tv_moisture_amount"
                android:text="@string/lbl_pressure"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/text_regular_2x" />

            <TextView
                android:id="@+id/tv_pressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/tv_moisture_amount"
                android:layout_below="@id/lbl_pressure"
                android:text="@string/pressure"
                android:textColor="@color/icons"
                android:textSize="@dimen/text_regular_2x" />

            <TextView
                android:id="@+id/lbl_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/lbl_moisture_amount_first"
                android:layout_below="@id/tv_pressure"
                android:text="@string/lbl_dummy_speed"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/text_regular_2x" />

            <TextView
                android:id="@+id/tv_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/tv_moisture_amount"
                android:layout_below="@id/lbl_speed"
                android:text="@string/speed"
                android:textColor="@color/icons"
                android:textSize="@dimen/text_regular_2x" />


        </RelativeLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>
